Added a script to page.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Emeraldwalk Codeground</title>
+	<script type="text/javascript">alert('Testing a script.');</script>
 </head>
 <body>
 	Hello.
