--- a/samples/simple.html
+++ b/samples/simple.html
@@ -17,12 +17,14 @@
 
 <body ng-app="simpleSampleModule">
 	<div ng-controller="SimpleController as vm">
-		<ew-code-sample css-content="vm.cssOutput"
+		<ew-code-sample xjs-urls="['../bower_components/less/dist/less.min.js']"
+						xstyle-urls="['../less/emeraldwalk.code_playground.less']"
+						css-content="vm.cssOutput"
 						js-content="vm.tsOutput"
 						html-content="vm.htmlOutput"></ew-code-sample>
 		<div class="split-editor">
 			<ew-ace-editor source="vm.htmlOutput"></ew-ace-editor>
-			<ew-ace-editor mode="css" source="vm.cssOutput"></ew-ace-editor>
+			<ew-ace-editor mode="less" source="vm.cssOutput"></ew-ace-editor>
 		</div>
 
 		<div class="split-editor">
