--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Emeraldwalk Codeground</title>
-	<script type="text/javascript">alert('Testing a script.');</script>
+	<link rel="stylesheet/less" type="text/css" href="https://cdn.rawgit.com/emeraldwalk/codeground/master/less/emeraldwalk.code_playground.less">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/typescript/1.8.7/typescript.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
+	<script src="https://rawgit.com/emeraldwalk/codeground/master/out/emeraldwalk.code_playground.js"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.6.0/less.min.js"></script>
 </head>
-<body>
-	Hello.
+
+<body ng-app="simpleSampleModule">
+	<div ng-controller="SimpleController as vm">
+		<div class="pull-left">
+			<div class="split-editor">
+				<ew-ace-editor source="vm.htmlOutput"></ew-ace-editor>
+			</div>
+			<div class="split-editor">
+				<ew-less-editor on-compile="vm.lessOutput = value"></ew-less-editor>
+				<ew-ace-editor mode="css" source="vm.lessOutput"></ew-ace-editor>
+			</div>
+			<div class="split-editor">
+				<ew-ts-editor on-compile="vm.tsOutput = value"></ew-ts-editor>
+				<ew-js-editor source="vm.tsOutput"></ew-js-editor>
+			</div>
+		</div>
+		<div class="pull-left output">
+			<h2>Output</h2>
+			<ew-code-sample xstyle-urls="['../less/emeraldwalk.code_playground.less']"
+						css-content="vm.lessOutput"
+						js-content="vm.tsOutput"
+						html-content="vm.htmlOutput"></ew-code-sample>
+		</div>
+	</div>
 </body>
+
 </html>
