--- a/index.html
+++ b/index.html
@@ -15,26 +15,28 @@
 </head>
 
 <body ng-app="simpleSampleModule">
+	<h1>Codeground Sample</h1>
+	<p>This sample shows .less and .ts compilation components with angular.js support.</p>
 	<div ng-controller="SimpleController as vm">
 		<div class="pull-left">
 			<div class="split-editor">
 				<ew-ace-editor source="vm.htmlOutput"></ew-ace-editor>
-			</div>
-			<div class="split-editor">
 				<ew-less-editor on-compile="vm.lessOutput = value"></ew-less-editor>
-				<ew-ace-editor mode="css" source="vm.lessOutput"></ew-ace-editor>
 			</div>
+			<!--<div class="split-editor">
+				<ew-ace-editor mode="css" source="vm.lessOutput"></ew-ace-editor>
+			</div>-->
 			<div class="split-editor">
 				<ew-ts-editor on-compile="vm.tsOutput = value"></ew-ts-editor>
 				<ew-js-editor source="vm.tsOutput"></ew-js-editor>
 			</div>
 		</div>
 		<div class="pull-left output">
-			<h2>Output</h2>
-			<ew-code-sample xstyle-urls="['../less/emeraldwalk.code_playground.less']"
-						css-content="vm.lessOutput"
-						js-content="vm.tsOutput"
-						html-content="vm.htmlOutput"></ew-code-sample>
+			<ew-code-sample module-name="codeSampleModule"
+			                module-dependencies="['emeraldwalk.code-playground']"
+							css-content="vm.lessOutput"
+							js-content="vm.tsOutput"
+							html-content="vm.htmlOutput"></ew-code-sample>
 		</div>
 	</div>
 </body>
