Renamed .less file.

--- a/samples/simple.html
+++ b/samples/simple.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Basic TypeScript Compilation</title>
-	<link rel="stylesheet/less" type="text/css" href="../less/emeraldwalk.code_playground.less">
+	<link rel="stylesheet/less" type="text/css" href="../less/emeraldwalk-codeground.less">
 	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>-->
 	<script src="../lib/ace.js"></script>
 	<script src="../node_modules/typescript/lib/typescript.js"></script>
