Renamed .less file.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Emeraldwalk Codeground</title>
-	<link rel="stylesheet/less" type="text/css" href="https://cdn.rawgit.com/emeraldwalk/codeground/master/less/emeraldwalk.code_playground.less">
+	<link rel="stylesheet/less" type="text/css" href="https://cdn.rawgit.com/emeraldwalk/codeground/master/less/emeraldwalk-codeground.less">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.3/ace.js" type="text/javascript" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/typescript/1.8.7/typescript.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
-	<script src="https://rawgit.com/emeraldwalk/codeground/master/out/emeraldwalk.code_playground.js"></script>
+	<script src="https://rawgit.com/emeraldwalk/codeground/master/out/emeraldwalk-codeground.js"></script>
+
+	<script>
+		less = {
+			errorReporting: 'console'
+		}
+	</script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.6.0/less.min.js"></script>
 </head>
